--- a/systock-app/src/app/layout/layout.component.html
+++ b/systock-app/src/app/layout/layout.component.html
@@ -6,7 +6,7 @@
       <div class="container-fluid">
         <router-outlet></router-outlet>
       </div>
-      <footer class="py-4 bg-light mt-auto">
+      <footer class="py-4 bg-light mt-5">
         <div class="container-fluid">
             <div class="d-flex align-items-center justify-content-between small">
                 <div class="text-muted">Copyright &copy; Meus Clientes 2020</div>
