--- a/systock-app/src/app/template/sidebar/sidebar.component.html
+++ b/systock-app/src/app/template/sidebar/sidebar.component.html
@@ -10,11 +10,19 @@
                     Home
                 </a>
                 <div class="sb-sidenav-menu-heading">Cadastros</div>
+                
                 <a class="nav-link collapsed" routerLink="/clientes" 
                     data-toggle="collapse" data-target="#collapseLayouts" 
                     aria-expanded="false" aria-controls="collapseLayouts"
                     ><div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                     Clientes
+                </a>
+
+                <a class="nav-link collapsed" routerLink="/produtos" 
+                    data-toggle="collapse" data-target="#collapseLayouts" 
+                    aria-expanded="false" aria-controls="collapseLayouts"
+                    ><div class="sb-nav-link-icon"><i class="fa fa-plus-square"></i></div>
+                    Produtos
                 </a>
 
                 <a class="nav-link collapsed" routerLink="/servicos-prestados" 
