Implementação CRUD Cadastro de Entregador e Forma de Pagamento

--- a/systock-app/src/app/template/sidebar/sidebar.component.html
+++ b/systock-app/src/app/template/sidebar/sidebar.component.html
@@ -25,6 +25,20 @@
                     Produtos
                 </a>
 
+                <a class="nav-link collapsed" routerLink="/entregadores" 
+                    data-toggle="collapse" data-target="#collapseLayouts" 
+                    aria-expanded="false" aria-controls="collapseLayouts"
+                    ><div class="sb-nav-link-icon"><i class="fa fa-plus-square"></i></div>
+                    Entregadores
+                </a>
+
+                <a class="nav-link collapsed" routerLink="/formas-pagamentos" 
+                    data-toggle="collapse" data-target="#collapseLayouts" 
+                    aria-expanded="false" aria-controls="collapseLayouts"
+                    ><div class="sb-nav-link-icon"><i class="fa fa-plus-square"></i></div>
+                    Formas de Pagamento
+                </a>
+
                 <a class="nav-link collapsed" routerLink="/servicos-prestados" 
                     data-toggle="collapse" data-target="#collapseLayouts" 
                     aria-expanded="false" aria-controls="collapseLayouts"
